// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDoPhasePrompt > handles a phase that has no steps (works on whole phase) 1`] = `
"# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 1: Bootstrap**
Goal: CLI vrací --version

(The phase is not broken down into steps — work on the whole phase at once.)

# Your task
Implement the whole phase so that it meets the goal.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

Read the files yourself as needed — they are not handed to you up front.
When you are done, end the session (type /exit or press Ctrl+D). The user then verifies manually with \`mini done\`.
"
`;

exports[`buildDoPhasePrompt > renders step detail on an indented line, with the focus marker still on the title 1`] = `
"# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 6: Detail v krocích**
Goal: detail se vykreslí

Steps:
- [done] rozhodnout framework
    vitest; běží přes npm test
- [in progress] napsat snapshoty   ← work on this
    snapshot test pokrývá prompt
- [todo] bez detailu

# Your task
Implement the step: "napsat snapshoty".

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

Read the files yourself as needed — they are not handed to you up front.
When you are done, end the session (type /exit or press Ctrl+D). The user then verifies manually with \`mini done\`.
"
`;

exports[`buildDoPhasePrompt > renders steps with a focus marker on the focused step only 1`] = `
"# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 3: Snapshot testy**
Goal: prompty mají testy

Steps:
- [done] rozhodnout framework
- [in progress] napsat snapshoty   ← work on this
- [todo] spustit npm test
- [skipped] starý nápad

# Your task
Implement the step: "napsat snapshoty".

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

Read the files yourself as needed — they are not handed to you up front.
When you are done, end the session (type /exit or press Ctrl+D). The user then verifies manually with \`mini done\`.
"
`;

exports[`buildDoPhasePrompt > renders steps without any focus marker when focusedStep is null 1`] = `
"# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 4: Cleanup**
Goal: tests projdou

Steps:
- [todo] odstranit dead code
- [todo] aktualizovat README

# Your task
Implement the whole phase so that it meets the goal.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

Read the files yourself as needed — they are not handed to you up front.
When you are done, end the session (type /exit or press Ctrl+D). The user then verifies manually with \`mini done\`.
"
`;
